<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tableFIO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FIO"
        android:layout_marginStart="4dp"
        android:width="150dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tableRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/root"
        android:width="75dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/tableDelete"
        android:layout_width="wrap_content"
        android:layout_marginEnd="4dp"
        android:width="100dp"
        android:height="20dp"
        android:background="@color/buttonEnter"
        android:text="@string/delete"
        android:onClick="deleteUser"/>

</TableRow>